--- a/starter_code/css/style.css
+++ b/starter_code/css/style.css
@@ -2,30 +2,39 @@
 /* SETUP
 /*******************************************/
 
+
 /* Box Model */
+
 * {
-     -moz-box-sizing: border-box; /* Firexfox */
-     -webkit-box-sizing: border-box; /* Safari/Chrome/iOS/Android */
-     box-sizing: border-box; /* IE */
+    -moz-box-sizing: border-box;
+    /* Firexfox */
+    -webkit-box-sizing: border-box;
+    /* Safari/Chrome/iOS/Android */
+    box-sizing: border-box;
+    /* IE */
+    font-family: "Open Sans", Arial, sans-serif;
 }
+
 
 /******************************************
 /* FONTS
 /*******************************************/
 
-/* font-family: "Open Sans", Arial, sans-serif */
+
+
+
 @import url('https://fonts.googleapis.com/css?family=Open+Sans');
 
 /******************************************
 /* BASE STYLES
 /*******************************************/
 
-
 body {
     color: #000;
     font-size: 12px;
     line-height: 1.4;
-    font-family: Helvetica, Arial, sans-serif;
+    /* font-family: Helvetica, Arial, sans-serif; */
+
 }
 
 
@@ -33,18 +42,160 @@ body {
 /* LAYOUT
 /*******************************************/
 
-header {
+.head{
+background-image: url("../images/header_bg.jpg");
+/* background: #606161; */
+width: 100%;
+height: 530px;
+background-size: 100%;
+background-repeat: no-repeat; 
+}
+
+.container {
+    display: flex;
+    height: 200px;
+    align-content: center;
+    justify-content: center;
+    flex-flow: column  wrap;
+    
+    margin: 70px;
+}
+#headh1{
+
+    height:auto;
+    color: white;
+    font-weight: bolder;
+    font-size: 34px;
+    padding:  30px 30px;
 
 }
 
+#headh2{
+    /* flex-grow: 1; */
+    font-weight: bold;
+    font-size: 30px;
+    color: white;
+    align-self: flex-start ;
+justify-self: center;  
+
+
+}
+#headb{
+    background-color: #f9e42e;
+    font-weight: bolder;
+    color: darkblue;
+    font-size:  20px;
+    padding: 10px 40px;
+    border:  none;
+    border-radius: 5px;
+    justify-content:  flex-end;  
+    align-self: center ;
+    margin: 10px
+    
+    /* flex-grow: 1; */
+}
+
+.cont{
+    background-color: #f0efef;
+    padding: 40px;
+    color: #606161;
+
+}
 footer {
-
+    background: #3a3a3a;
+    width: 100%;
+    height: 250px;
+    display: flex;
+    flex-direction: column;
+    justify-content: space-evenly;
 }
+
 
 /******************************************
 /* ADDITIONAL STYLES
 /*******************************************/
 
+.cont h2{
+    font-weight: bold;
+    color: #033048;
+    font-size: 30px;
+    margin: 10px;
+}
+
+.cont p{
+    margin: 10px;
+    font-size: 23px;
+}
 
 
+.cont li{
+    margin: 25px;
+    font-size: 18px;
+list-style: circle;
+}
 
+.lastsec{
+    background-image: url('../images/testimonial_bg.jpg');
+    opacity: 0.8;
+    width: 100%;
+    height: 200px;
+    padding: 40px;
+}
+
+.lastsec p{
+    font-style: italic;
+    font-weight: 400;
+    color: rgba(240, 239, 239,0.8);
+    font-size: 25px;
+    padding: 20px;
+    text-align: center;
+}
+
+.lastsec p strong{
+    font-style: normal;
+    font-weight: 500;
+    color: white;
+}
+.lastsec2{
+    width: 100%;
+    background-color: #f9e42e;
+    display: flex;
+    justify-content: center;;
+}
+
+.lastsec2 button{
+    margin: 20px;
+    background-color: #033048;
+    color: white;
+    border: none;
+    border-radius: 5px;
+    font-size: 20px;
+    padding: 15px 35px;
+    font-weight: bolder;
+}
+
+footer h2{
+    font-weight: bolder;
+    color: #f9e42e;
+    font-size: 30px;
+    text-align: center;
+    padding: 10px;
+}
+
+footer div{
+    padding: 10px;
+display: flex;
+justify-content: center;
+}
+
+footer div img{
+margin: 20px;
+}
+
+footer h3{
+    color: white;
+    text-align: center;
+    font-weight: 500;
+    font-size: 15px;
+
+}
