--- a/starter_code/css/style.css
+++ b/starter_code/css/style.css
@@ -10,21 +10,21 @@ body {
     background-color: #f0efef;
     font-size: 14px;
     line-height: 1.4;
-    font-family: "Open Sans", Arial, sans-serif;
-}
+    font-family: "Open Sans", Arial, sans-serif;}
+
 
 header {
     background-image: url(../images/header_bg.jpg);
     height: 400px;
-    padding: 5px;
-}
+    padding: 5px;}
+
 h1{
     font-weight: bolder;
     font-size: 24px;
     color: white;
     margin-top: 3%;
-    margin-left: 5%;
-}
+    margin-left: 5%;}
+
 
 h2{
     font-weight: bold;
@@ -51,20 +51,20 @@ h2{
     font-size: 20px;}
 
 h3{
-margin: 2% 5%;
-font-size: 20px;
-color: #606161;}
+    margin: 2% 5%;
+    font-size: 20px;
+    color: #606161;}
 
 
 ul{
-font-weight: lighter;
-margin: 3% 5%;
-font-size: 20px;
-color: #606161; 
-list-style: disc;}
+    font-weight: lighter;
+    margin: 3% 5%;
+    font-size: 20px;
+    color: #606161; 
+    list-style: disc;}
 
 li{
-margin: 0 5%;}
+    margin: 0 5%;}
 
 .quote{
     background-image: url(../images/testimonial_bg.jpg);
@@ -87,7 +87,7 @@ margin: 0 5%;}
 .signup{
     background-color: yellow;
     height: 100px;
-    padding: 40px;}
+    padding: 30px;}
 
 .button1{
     text-align: center;
@@ -102,12 +102,10 @@ margin: 0 5%;}
     height:40px;}
        
 footer {
-
-background-color:  #606161;
-height: 200px;
-
-text-align: center;
-color: #f0efef;}
+    background-color: #606161;
+    height: 200px;
+    text-align: center;
+    color: #f0efef;}
 
 
 h5{
@@ -117,8 +115,6 @@ h5{
     padding: 0 auto;
     text-align: center;}
 
-
 img{
-
- 
+    margin: 30px 20px;
 }
