--- a/starter_code/css/style.css
+++ b/starter_code/css/style.css
@@ -28,23 +28,125 @@ body {
     font-family: Helvetica, Arial, sans-serif;
 }
 
+h1 {
+    margin: 0;
+    font-size: 24px;
+  }
+  
+  h2 {
+    margin: 0;
+    font-weight: 600;
+    font-size: 24px;
+  }
+  
+  a {
+    text-decoration: none;
+  }
+  
 
 /******************************************
 /* LAYOUT
 /*******************************************/
 
 header {
+    padding: 100px;
+    background: url("/Users/RayG/Desktop/sei/lesson/lesson-w02d01-html-css/imges/header_bg.jpg") no-repeat center center fixed;
+    -webkit-background-size: cover; /* these are special syntax for each browser - all do the same thing though */ 
+    -moz-background-size: cover;
+    -o-background-size: cover;
+    background-size: cover;
+    color: white;
+    overflow: auto; /* added this so header would respect a.button's margin-bottom */
+  }
+  
+  .logo {
+    font-weight: 800;
+    font-size: 48px;
+  }
+  
+  header .logo {
+    margin-bottom: 100px;
+  }
+  
+  header h2 {
+    margin-bottom: 100px;
+    text-align: center;
+  }
+  
+  header a.button {
+    background: #f9e42e;
+    font-size: 48px;
+    color: #121212;
+    margin-bottom: 100px; /* required I add overflow: auto; to header */
+  }
+  
+  section#benefits {
+    background: white;
+    color: #606161;
+    font-weight: 100;
+    font-size: 24px;
+    padding: 50px 200px;
+  }
+  
 
-}
+  section#quote {
+    background: url("/Users/RayG/Desktop/sei/lesson/lesson-w02d01-html-css/imges/testimonial_bg.jpg")  no-repeat center center fixed;
+    -webkit-background-size: cover; /* these are special syntax for each browser - all do the same thing though */ 
+    -moz-background-size: cover;
+    -o-background-size: cover;
+    background-size: cover;
+    color: white;
+    font-weight: 200;
+    font-size: 36px;
+    padding: 50px 310px;
+    text-align: center;
+  }
+  
 
-footer {
-
-}
-
+ footer {
+    background: #121212;
+    color: white;
+    font-weight: 200;
+    font-size: 28px;
+    padding: 50px;
+    text-align: center;
+  }
+  
+  footer nav {
+    margin-bottom: 50px;
+  }
+  
+  footer nav a {
+    padding: 20px;
+  }
+  
+  footer .logo {
+    color: yellow;
+    margin-bottom: 50px;
+  }
+  
+  footer p {
+    font-size: 16px;
+    font-weight: 600;
+  }
 /******************************************
 /* ADDITIONAL STYLES
 /*******************************************/
-
+.button {
+    display: block;
+    width: 280px;
+    padding: 12px 0;
+    border-radius: 5px;
+    margin: 0 auto;
+    text-align: center;
+    font-weight: 700;
+    font-size: 28px;
+  }
+  
+  section {
+    padding: 35px 0;
+  }
+  
 
 
 
