--- a/starter_code/css/style.css
+++ b/starter_code/css/style.css
@@ -1,6 +1,4 @@
-/******************************************
-/* SETUP
-/*******************************************/
+
 
 /* Box Model */
 * {
@@ -9,16 +7,80 @@
      box-sizing: border-box; /* IE */
 }
 
-/******************************************
-/* FONTS
-/*******************************************/
+
+.container {
+    border: 1px solid black;
+    height: auto;
+    margin: 0 10%;
+    display: flex;
+    justify-content: center;
+    flex-wrap: wrap;
+
+    .item{
+       border: solid 1px;
+       padding: 0 0.15em;
+       float: left;
+       width: 5.5em;
+       text-align: right;
+     }
+
+.Header {
+    flex: 100%;
+    border:1px solid black;
+  float:left;
+  width:100px;
+
+}
+.button{
+    flex: 20%;
+    height: 500px;
+    text-emphasis: extra bold;
+    border: 12px;
+    background: yellow;
+    
+}
+.subhead{
+    flex: 50%;
+    height: 500px;
+     background-color: #f0efef;
+color:light grey;
+}
+.bargraph{
+    flex: 20%;
+    height: 500px;
+}
+.list{
+    flex: 100%;
+    color:Light;
+    font-size:  13px;
+}
+
+.buttn{
+    flex: 100%;
+    text-emphasis: extra bold;
+    border: 12px;
+    
+}
+
+.closing{
+    flex: 100%;
+}
+
+.end{
+    flex: 100%;
+}
+
+
+    height: 200px;
+    width: 100%;
+}
+
+
 
 /* font-family: "Open Sans", Arial, sans-serif */
 @import url('https://fonts.googleapis.com/css?family=Open+Sans');
 
-/******************************************
-/* BASE STYLES
-/*******************************************/
+
 
 
 body {
@@ -28,23 +90,10 @@ body {
     font-family: Helvetica, Arial, sans-serif;
 }
 
-
-/******************************************
-/* LAYOUT
-/*******************************************/
-
-header {
-
-}
-
 footer {
+  font-size: 9px;
+   font-style: initial;
 
 }
-
-/******************************************
-/* ADDITIONAL STYLES
-/*******************************************/
-
-
 
 
