--- a/starter_code/css/style.css
+++ b/starter_code/css/style.css
@@ -26,6 +26,8 @@ body {
     font-size: 12px;
     line-height: 1.4;
     font-family: Helvetica, Arial, sans-serif;
+    flex: flex;
+    align-items: space-around;
 }
 
 
@@ -34,17 +36,48 @@ body {
 /*******************************************/
 
 header {
-
+    
 }
 
 footer {
 
 }
 
+.contentContainer{
+    background-color: #f0efef;
+}
 /******************************************
 /* ADDITIONAL STYLES
 /*******************************************/
 
+ul .items{
+    list-style-type: bullets;
+    font-size: 13px;
+    font-weight: lighter;
+}
 
+h1{
+font-weight: bolder;
+font-size: 24px;
+}
 
+h2{
+    font-size: 24px;
+}
+header button{
+    font-size: 14px;
+    font-weight: bolder;
+    border-radius: 5px; 
+}
 
+h3{
+    font: Arial bold 20px;
+}
+
+.contentContainer p{
+    font: Arial Semibold 20px;
+}
+footer p{
+    font-style: italic;
+    font-weight: lighter;
+}
