--- a/starter_code/css/style.css
+++ b/starter_code/css/style.css
@@ -26,6 +26,9 @@ body {
     font-size: 12px;
     line-height: 1.4;
     font-family: Helvetica, Arial, sans-serif;
+    text-align: center;
+    margin: 0;
+    height: 100%;
 }
 
 
@@ -33,14 +36,47 @@ body {
 /* LAYOUT
 /*******************************************/
 
-header {
+header { 
+    background-image: url("images/header_bg.jpg");
+    background-repeat: no-repeat;
+    background-size: 100%;
+    display: flex;
+    height: 800px;
+    flex-direction: column;
+    flex-wrap: wrap;
+    
 
+}
+
+.secondContainer {
+    border: 1px solid black;
+    display: flex;
+    height: 800px;
+    flex-direction: column;
+    flex-wrap: wrap;
+    background-color: #f0efef;
 }
 
 footer {
-
+    background-image: url("images/testimonial_bg.jpg");
+    background-repeat: no-repeat;
+    background-size: 100%;
+    display: flex;
+    height: 800px;
+    flex-direction: column;
+    flex-wrap: wrap;
 }
 
+.buttonBackground {
+    width: 100%;
+    height: 10%;
+    background-color: #f9e42e;
+    
+}
+
+p {
+    color: aliceblue;
+}
 /******************************************
 /* ADDITIONAL STYLES
 /*******************************************/
