--- a/starter_code/css/style.css
+++ b/starter_code/css/style.css
@@ -28,16 +28,79 @@ body {
     font-family: Helvetica, Arial, sans-serif;
 }
 
+.hd {
+    background-image: url("header_bg.jpg");
+    margin: 5px;
+}
+header {
+   
+    font-size: 24px;
+    font-weight: bolder;
+}
+#getPiece {
+    font-weight: Semibold;
+    font-size: 24px;
+    display: flex;
+    justify-content: center;
+    align-items: center;
+}
 
+#getNow {
+    font-weight: bolder;
+    font-size: 14px;
+    border: 5px;
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    border-block-color: #f9e42e;
+
+}
+
+.benefitslists {
+    background: #f0efef;
+}
+
+.benefits {
+    font-weight: Semibold;
+    font-size: 20px;
+}
+.para {
+    font-weight: Light Italic;
+    font-size: 13px;
+    display: flex; 
+
+}
+
+.lis {
+    font-weight: Light;
+    font-size: 13px;
+}
+
+.qoute {
+    font-weight: Light Italic;
+    font-size: 18px;
+}
+#name {
+    font-weight: 600;
+    font-size: 18px;
+}
+
+.signup {
+    border: 5px;
+    font-weight: bolder
+}
 /******************************************
 /* LAYOUT
 /*******************************************/
 
-header {
-
+#relaxer {
+    font-weight: bolder;
+    font-size: 24px;
 }
 
 footer {
+    font-size: 9px;
+    font-weight: 600;
 
 }
 
