--- a/starter_code/css/style.css
+++ b/starter_code/css/style.css
@@ -2,24 +2,31 @@
 /* SETUP
 /*******************************************/
 
+
 /* Box Model */
+
 * {
-     -moz-box-sizing: border-box; /* Firexfox */
-     -webkit-box-sizing: border-box; /* Safari/Chrome/iOS/Android */
-     box-sizing: border-box; /* IE */
+    -moz-box-sizing: border-box;
+    /* Firexfox */
+    -webkit-box-sizing: border-box;
+    /* Safari/Chrome/iOS/Android */
+    box-sizing: border-box;
+    /* IE */
 }
+
 
 /******************************************
 /* FONTS
 /*******************************************/
 
+
 /* font-family: "Open Sans", Arial, sans-serif */
+
 @import url('https://fonts.googleapis.com/css?family=Open+Sans');
 
 /******************************************
 /* BASE STYLES
 /*******************************************/
-
 
 body {
     color: #000;
@@ -33,18 +40,61 @@ body {
 /* LAYOUT
 /*******************************************/
 
-header {
-
+.container {
+    border: 1px solid white;
+    height: auto;
+    margin: 0 10%;
+    display: flex;
+    justify-content: center;
+    flex-wrap: wrap;
 }
 
-footer {
-
+h1 {
+    font-size: 60px;
 }
+
+p,
+ul {
+    text-align: center;
+    font-size: 24px;
+    font-family: 'Courier New', Courier, monospace;
+}
+
+.btn {
+    background-color: #f9e42e;
+    padding: 15px;
+    width: 250px;
+}
+
+.benefits {
+    height: 600px;
+    background-color: #f0efef;
+}
+
+.see {}
+
+#btn2 {
+    background-color: #033048;
+    color: white;
+    padding: 15px;
+    width: 250px;
+}
+
+.yellowLine {
+    height: 100px;
+    background-color: #f9e42e;
+}
+
+.footer {
+    height: 350px;
+    background-color: #606161;
+}
+
+#listLogo {
+    list-style: none;
+}
+
 
 /******************************************
 /* ADDITIONAL STYLES
 /*******************************************/
-
-
-
-
