--- a/starter_code/css/style.css
+++ b/starter_code/css/style.css
@@ -25,22 +25,77 @@ body {
     color: #000;
     font-size: 12px;
     line-height: 1.4;
-    font-family: Helvetica, Arial, sans-serif;
+    font-family: Helvetica, Arial, sans-serif; 
+    background-image: url("images/header_bg.jpg") ; 
+
 }
 
 
 /******************************************
 /* LAYOUT
 /*******************************************/
-
-header {
-
-}
-
-footer {
+h1 { 
+    Font: url=("https://www.google.com/fonts#UsePlace:use/Collection:Open+Sans") ;  
+    font-weight: Extrabold  ;
+    font-size: 24px;  
 
 }
 
+.header {
+    
+}
+p.one {
+    font-weight: Semibold ; 
+    font-size: 24px ; 
+}
+
+p.two{
+    font-weight:Extrabold, 14px 5px; 
+    border: radius ; 
+
+}
+p.three{
+    font-weight: Semibold ; 
+    font-size: 20px ;
+
+}
+p.four{
+    font-weight: Light  ; 
+    font-size: 13px ;
+}
+ul { 
+    font-weight: Light  ; 
+    font-size: 13px ;
+
+}
+p.five { 
+    font-weight: Light Italic; 
+    font-size: 18px; 
+}
+p.six{
+    font-weight: Semibold; 
+    font-size: 18px; 
+
+}
+p.seven{
+    font-weight:Extrabold, 12px, 5px ; 
+
+}
+p.eight{
+    font-weight: Extrabold; 
+    font-size: 24px; 
+
+}
+p.ten{
+    font-weight: Semibold; 
+    font-size: 9px;
+}
+.benefit { 
+    background-color: #f0efef ; 
+    background-image: url("images/header_bg.jpg")
+     
+
+}
 /******************************************
 /* ADDITIONAL STYLES
 /*******************************************/
