--- a/starter_code/css/style.css
+++ b/starter_code/css/style.css
@@ -25,7 +25,7 @@ body {
     color: #000;
     font-size: 12px;
     line-height: 1.4;
-    font-family: Helvetica, Arial, sans-serif;
+    font-family: "Open sans", Arial, sans-serif;
 }
 
 
@@ -132,13 +132,14 @@ li{
 #testemony {
     padding: 50px;
     text-align: center;
-    color: #606161;
+    color: white;
     font-style: italic;
     font-size: 18px;
 }
 #testemonyName{
     font-weight: 600;
     font-size:18px;
+    font-style: normal;
 }
 
 #socialMedia{
