--- a/relaxr/style.css
+++ b/relaxr/style.css
@@ -11,7 +11,7 @@ body {
     font-family: Helvetica, Arial, sans-serif;
 }
 .re{
-    background-image: url("../images/header_bg.jpg");
+    background-image: url("../starter_code/images/header_bg.jpg");
     /* background: #606161; */
     width: 100%;
     height: 530px;
@@ -119,7 +119,7 @@ list-style: circle;
     width: 100%;
     background-color: #f9e42e;
     display: flex;
-    justify-content: center;;
+    justify-content: center;
 }
 
 .sign button{
