--- a/starter_code/css/style.css
+++ b/starter_code/css/style.css
@@ -27,13 +27,15 @@ html,
 body {
     height: 100%;
     width: 100%;
+    background-color: #222222;
 }
 
 body {
+    font-family: "Open Sans", Arial, sans-serif;
     color: #000;
     font-size: 12px;
     line-height: 1.4;
-    font-family: Helvetica, Arial, sans-serif;
+    font-family: 'Segoe UI', Tahoma, Geneva, Verdana, sans-serif;
 }
 
 
@@ -46,16 +48,14 @@ header {
     background-size: cover;
     background-repeat: no-repeat;
     background-position: 50% 50%;
+    padding: 1rem 3rem 6rem;
 }
-
-footer {}
 
 header h1 {
     font-weight: 800;
     font-size: 24px;
-    position: absolute;
-    top: 2rem;
-    left: 2rem;
+    top: 0;
+    left: 0;
 }
 
 header p {
@@ -79,6 +79,11 @@ header a {
 #benefits ul {
     font-weight: 300;
     font-size: 13px;
+    list-style: disc;
+}
+
+#benefits ul {
+    padding-left: 2rem;
 }
 
 #testimonial {
@@ -92,6 +97,7 @@ header a {
     font-weight: 300;
     font-style: italic;
     font-size: 18px;
+    padding: 0 10rem;
 }
 
 #testimonial figcaption {
@@ -99,10 +105,18 @@ header a {
     font-size: 18px;
 }
 
+/* #sign-up {
+
+} */
+
 #sign-up a {
     font-weight: 800;
     font-size: 12px;
 }
+
+/* footer {
+
+} */
 
 footer p {
     font-weight: 800;
@@ -121,7 +135,7 @@ footer small {
 
 .container {
     height: 100%;
-    width: 100%;
+    width: 62.5%;
     min-height: 1000px;
     display: flex;
     align-items: stretch;
@@ -190,7 +204,7 @@ footer small {
 }
 
 .pdng {
-    padding: 1rem;
+    padding: 3rem;
 }
 
 .mrgn {
@@ -200,4 +214,15 @@ footer small {
 .center-txt {
     text-align: center;
     margin: 0 auto;
+}
+
+a {
+    transition: all 0.25s ease-in-out;
+}
+
+a:hover {
+    /* background-color: rgba(255, 255, 255, 0.5); */
+    box-shadow: 0px 0px 1rem rgba(0, 0, 0, 0.75);
+    transition: all 0.25s ease-in-out;
+
 }
